# WAL

./: .gitignore  CMakeLists.txt  README.md  config.example.toml
cmake/: EmbedShaders.cmake
docs/: configuration.md  development.md  usage.md
include/wal/: app.hpp  config.hpp  io.hpp  layer_shell.hpp  ui.hpp
packaging/arch/: .SRCINFO  .gitignore  PKGBUILD
src/: app.cpp  config.cpp  io.cpp  layer_shell.cpp  main.cpp  ui.cpp
src/shaders/: background.vert
